// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceCard renders an href when supplied 1`] = `
<ServiceCard
  onClick={null}
  shouldOpenInNewTab={false}
  url="https://www.thumbtack.com/k/massage/near-me/"
>
  <a
    className="root"
    href="https://www.thumbtack.com/k/massage/near-me/"
    onClick={null}
    target="_self"
  >
    Lorem
  </a>
</ServiceCard>
`;

exports[`ServiceCardDescription renders a description when supplied 1`] = `
<ServiceCardDescription
  iconColor="blue"
>
  <div
    className="descriptionWrap iconBlue"
  >
    <div
      className="description"
    >
      Lorem
    </div>
  </div>
</ServiceCardDescription>
`;

exports[`ServiceCardDescription renders a icon and color is blue 1`] = `
<ServiceCardDescription
  icon={<svg />}
  iconColor="blue"
>
  <div
    className="descriptionWrap iconBlue"
  >
    <svg />
    <div
      className="description"
    >
      Lorem
    </div>
  </div>
</ServiceCardDescription>
`;

exports[`ServiceCardDescription renders icon color 1`] = `
<ServiceCardDescription
  icon=""
  iconColor="green"
>
  <div
    className="descriptionWrap iconGreen"
  >
    <div
      className="description"
    >
      Lorem
    </div>
  </div>
</ServiceCardDescription>
`;

exports[`ServiceCardImage render works 1`] = `
<ServiceCardImage
  alt="duck duck goose"
  url="https://www.thumbtack.com/image.png"
>
  <Image
    alt="duck duck goose"
    className="image"
    containerAspectRatio={1.6}
    objectFit="cover"
    objectPosition="center"
    sources={Array []}
    src="https://www.thumbtack.com/image.png"
  >
    <div
      className="image"
      style={
        Object {
          "minHeight": "1px",
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "paddingTop": "62.5%",
          }
        }
      />
      <Picture
        alt="duck duck goose"
        sizes="0px"
        sources={Array []}
        src="https://www.thumbtack.com/image.png"
        style={
          Object {
            "bottom": 0,
            "display": "block",
            "fontFamily": "\\"object-fit: cover; object-position: center\\"",
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      >
        <picture>
          <img
            alt="duck duck goose"
            className="imageLoading"
            onLoad={[Function]}
            sizes="0px"
            src="https://www.thumbtack.com/image.png"
            style={
              Object {
                "bottom": 0,
                "display": "block",
                "fontFamily": "\\"object-fit: cover; object-position: center\\"",
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "position": "absolute",
                "right": 0,
                "top": 0,
                "width": "100%",
              }
            }
          />
        </picture>
      </Picture>
      <noscript>
        <Picture
          alt="duck duck goose"
          sources={Array []}
          src="https://www.thumbtack.com/image.png"
        />
      </noscript>
    </div>
  </Image>
</ServiceCardImage>
`;

exports[`ServiceCardTitle renders a title when supplied 1`] = `
<ServiceCardTitle>
  <div
    className="title"
    title="Lorem"
  >
    Lorem
  </div>
</ServiceCardTitle>
`;
